# coursera_cpp_specialization_brown_belt

./: .gitignore
booking/: CMakeLists.txt
booking/include/: booking.h
booking/src/: main.cpp
cache/: CMakeLists.txt
cache/src/: Solution.cpp
collide/: CMakeLists.txt
collide/src/: main.cpp
collide_v2/: CMakeLists.txt
collide_v2/src/: collide.cpp
comment_server/: CMakeLists.txt
comment_server/src/: main.cpp
comment_server_v2/: CMakeLists.txt
comment_server_v2/src/: comment_server_v2.cpp
concurrent_map_2/: CMakeLists.txt
concurrent_map_2/src/: main.cpp
concurrent_map_2_v2/: CMakeLists.txt
concurrent_map_2_v2/src/: concurrent_map_2_v2.cpp
domains/: CMakeLists.txt
domains/src/: main.cpp
domains_testing/: CMakeLists.txt
domains_testing/src/: main.cpp
ebook/: CMakeLists.txt
ebook/src/: main.cpp
expr_tree/: CMakeLists.txt
expr_tree/include/: Common.h
expr_tree/src/: expr_tree.cpp
expresses/: CMakeLists.txt
expresses/src/: main.cpp
hash_person/: CMakeLists.txt
hash_person/src/: main.cpp
hash_person_v2/: CMakeLists.txt
hash_person_v2/src/: main.cpp
hash_point/: CMakeLists.txt
hash_point/src/: main.cpp
hash_point_v2/: CMakeLists.txt
hash_point_v2/src/: main.cpp
hash_s/src/: main.cpp
hash_set/: CMakeLists.txt
hash_set_v2/: CMakeLists.txt
hash_set_v2/src/: main.cpp
hotel_booking/: CMakeLists.txt
hotel_booking/src/: main.cpp
ini/: CMakeLists.txt
ini/include/: ini.h
ini/src/: ini.cpp  main.cpp
ini_v2/: CMakeLists.txt  spendings_ini
ini_v2/answer/: ini.cpp
ini_v2/include/: ini.h
lazy_value/: CMakeLists.txt
lazy_value/src/: main.cpp
lazy_value_v2/: CMakeLists.txt
lazy_value_v2/src/: lazy_value_v2.cpp
object_pool/: CMakeLists.txt
object_pool/src/: object_pool.cpp
pipeline/: CMakeLists.txt
pipeline/src/: pipeline.cpp
polynomial/: CMakeLists.txt
polynomial/src/: main.cpp
polynomial_v2/: CMakeLists.txt
polynomial_v2/src/: polynomial_v2.cpp
print_stats/: CMakeLists.txt
print_stats/src/: main.cpp
print_stats_2/: CMakeLists.txt
print_stats_2/src/: main.cpp
print_stats_2_v2/: CMakeLists.txt
print_stats_2_v2/src/: print_stats_2_v2.cpp
print_stats_testing/: CMakeLists.txt
print_stats_testing/src/: main.cpp
priority_collection/: CMakeLists.txt
priority_collection/src/: main.cpp
priority_collection_v2/src/: main.cpp
refactoring/: CMakeLists.txt
refactoring/src/: main.cpp
refactoring_v2/: CMakeLists.txt  refactoring
refactoring_v2/src/: refactoring.cpp
restructuring/: CMakeLists.txt
restructuring/src/: main.cpp  stats_aggregator.cpp  stats_aggregator_test.cpp
restructuring_v2/: CMakeLists.txt
secondary_index/: CMakeLists.txt
secondary_index_v2/: CMakeLists.txt
set_iterator_next/: CMakeLists.txt
set_iterator_next/src/: main.cpp
set_iterator_next_v2/: CMakeLists.txt
spendings/: CMakeLists.txt
spendings_v2/xml/: CMakeLists.txt  spendings_xml
spendings_v2/xml/src/: main.cpp
synchronized_2/: CMakeLists.txt
synchronized_2/src/: main.cpp
synchronized_2_v2/: CMakeLists.txt
synchronized_2_v2/src/: synchronized_2_v2.cpp
team_tasks/: CMakeLists.txt
test_domains/: CMakeLists.txt  clang-format  hello
textures/: CMakeLists.txt
unique_ptr/: CMakeLists.txt
zoo/: CMakeLists.txt
(+17 files in other folders)
